actions update final 100%

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,28 @@
 server {
     listen 80;
+    server_name magictyperoyale.daw.inspedralbes.cat;
+
+    # Ruta a los archivos estáticos del frontend
     root /usr/share/nginx/html;
     index index.html;
+
+    # Sirve el frontend de Vue (manejando el enrutamiento del lado del cliente)
     location / {
         try_files $uri $uri/ /index.html;
+    }
+
+    # Redirige las peticiones de Socket.IO al backend
+    location /socket.io/ {
+        # El nombre 'backend' es el nombre del servicio en docker-compose.prod.yml
+        proxy_pass http://backend:3001;
+        
+        # Cabeceras necesarias para la actualización a WebSocket
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        
+        # Evita el almacenamiento en caché de las respuestas de WebSocket
+        proxy_cache_bypass $http_upgrade;
     }
 }
