--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,9 @@ server {
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers off;
 
+    # Establece el protocolo original para que las redirecciones y la lógica de la aplicación funcionen correctamente.
+    proxy_set_header X-Forwarded-Proto https;
+
     root /usr/share/nginx/html;
     index index.html;
 
@@ -31,14 +34,11 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://backend:3001/socket.io/; # Asegúrate que el path coincide
+        proxy_pass http://trr-backend-prod:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
     }
 }
