--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,16 @@
 server {
     listen 80;
     server_name magictyperoyale.daw.inspedralbes.cat;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name magictyperoyale.daw.inspedralbes.cat;
+
+    # SSL Certificates - IMPORTANT: Replace with your actual certificate paths
+    ssl_certificate /etc/letsencrypt/live/magictyperoyale.daw.inspedralbes.cat/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/magictyperoyale.daw.inspedralbes.cat/privkey.pem;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -13,8 +23,10 @@ server {
         proxy_pass http://trr-backend-prod:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_buffering off;
     }
 }
