--- a/nginx.conf
+++ b/nginx.conf
@@ -8,9 +8,6 @@ server {
     listen 443 ssl;
     server_name magictyperoyale.daw.inspedralbes.cat;
 
-    # SSL Certificates - IMPORTANT: Replace with your actual certificate paths
-    ssl_certificate /etc/letsencrypt/live/magictyperoyale.daw.inspedralbes.cat/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/magictyperoyale.daw.inspedralbes.cat/privkey.pem;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -20,7 +17,7 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://trr-backend-prod:3001;
+        proxy_pass http://trr-backend-prod:3001/socket.io/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
