--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://trr-backend-prod:3001/socket.io/;
+        proxy_pass http://backend:3001/socket.io/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
