--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,10 +26,10 @@ services:
       - "3307:3306" # Acceso desde el host (cambiado a 3307 para evitar conflictos)
     environment:
       # Variables de desarrollo HARDCODEADAS (como en tu ejemplo), cámbialas si es necesario.
-      - MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE: ${MYSQL_DATABASE}
-      - MYSQL_USER: ${MYSQL_USER}
-      - MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - mysql-data:/var/lib/mysql 
     healthcheck:
